<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">T_login_in</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="user_password">密码</string>
    <string name="find_password">找回密码</string>
    <string name="remember_password">记住密码</string>
    <string name="choose">选课</string>
    <string name="zhuanyefangxiang">专业方向</string>
    <string name="kechengming">课程名称</string>
    <string name="qiqizhouxu">起讫周序</string>
    <string name="ISBN">ISBN号码</string>
    <string name="jiaocai">教材名称</string>
    <string name="beizhu">备注</string>
    
    

</resources>
