<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
     android:background="@color/background">
    
     <LinearLayout
         
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/android_title_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="@string/choose"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
      </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/zhuanyefangxiang"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/zhuanyefangxaing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:background="#fffbfbfb"
                        android:singleLine="true" />


                </LinearLayout>
                 <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/kechengming"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/kechengmingcheng"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:background="#fffbfbfb"
                        android:singleLine="true" />
                </LinearLayout>
                
                 <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/qiqizhouxu"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >
                         
                         
                     <EditText
                        android:id="@+id/qishi"
                        android:layout_width="5"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number" >

                        <requestFocus />
                    </EditText>
                    
                    <ImageView 
                        android:id="@+id/xian"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                		android:layout_alignParentTop="true"
                		android:layout_centerHorizontal="true"
                		android:src="@drawable/android_title_bg_progress"/>
                    
                    <EditText
                        android:id="@+id/jieshu"
                        android:layout_width="5"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number" >

                        <requestFocus />
                    </EditText>
                        
                    </LinearLayout>

                   
                    
                </LinearLayout>
                 <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/ISBN"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/ISBN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:background="#fffbfbfb"
                        android:singleLine="true" />
                </LinearLayout>
                
                 
          <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/jiaocai"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/jiaocaimingcheng"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:background="#fffbfbfb"
                        android:singleLine="true" />
                </LinearLayout>
     
             
          <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

              
             <RadioGroup
                    android:id="@+id/jiaocai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" ></RadioGroup>

             <RadioButton
                 android:id="@+id/jiaocai1_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="自编" />

             <RadioButton
                 android:id="@+id/jiuaocai1_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="选用" />
                   
                </LinearLayout>
                
          <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >
             
               <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/beizhu"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/beizhu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:background="#fffbfbfb"
                        android:singleLine="true" />
                      
           </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content" >

              <Button
                  android:id="@+id/querentianjia"
                  android:layout_width="80dp"
                  android:layout_height="42dp"
                  android:layout_marginLeft="13dp"
                  android:layout_marginRight="13dp"
                  android:layout_marginTop="13dp"
                  android:background="@drawable/login_layout_btn_bg"
                  android:text="确认添加"
                  android:textColor="@android:color/white"
                  android:textSize="15sp" />

              <Button
                  android:id="@+id/return"
                  android:layout_width="80dp"
                  android:layout_height="42dp"
                  android:layout_marginLeft="13dp"
                  android:layout_marginRight="13dp"
                  android:layout_marginTop="13dp"
                  android:background="@drawable/login_layout_btn_bg"
                  android:text="返回"
                  android:textColor="@android:color/white"
                  android:textSize="15sp" />

          </LinearLayout>

          
     </LinearLayout>
     
     

</LinearLayout>
